fix: rename webpack configs to .cjs for ES module compatibility

--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
   },
   "scripts": {
     "clean": "node scripts/clean.mjs",
-    "dev": "webpack --config build/webpack.dev.js --watch",
+    "dev": "webpack --config build/webpack.dev.cjs --watch",
     "dev:clean": "pnpm run clean && pnpm run dev",
     "build": "npm-run-all build:*",
     "build:clean": "node scripts/clean.mjs",
     "build:manifest": "node scripts/manifest.mjs",
-    "build:extension": "webpack --config build/webpack.prod.js",
+    "build:extension": "webpack --config build/webpack.prod.cjs",
     "build:zip": "node scripts/zip.mjs",
     "test": "vitest",
     "test:ui": "vitest --ui",
